# nlp-langid-service

./: .env  README.md  docker-compose.yml  pyproject.toml  requirements-all.txt  requirements.txt
kubernetes/: config-map.yml  langid.config-map.yml  langid.ingress.yml  langid.service.yml  langid.stateful.yml
src/: main.py  my_service.py
src/model/: Language.py  Languages.py  Ngram.py
src/trained_models/: de-CH.p  de.p  en.p  es.p  fr.p  it.p  nl.p  pl.p  pt.p  ru.p  tr.p
